src/objects/Project_Contract__c.object
<CustomObject>
    <description>Junction object between PSA Project object and standard Contract object.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Additional notes</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the contract.</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Project Contract</relationshipLabel>
        <relationshipName>Project_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Error_Description__c</fullName>
        <label>ERP Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Link to the project</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Contract</relationshipLabel>
        <relationshipName>Project_Contract</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PA_Contracts_Queue</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Project__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
        </filters>
        <label>PA Contracts Queue</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contract</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>